--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,3 +14,6 @@ v 0.1.1.5
 11. 完成了NorMap的测试，修改了其中string 赋值给const
 	char*的类型不匹配问题。添加了一些对函数参数的注释，修改后，测试已通过
 12. 完成了split_str函数的测试，添加了对函数参数的的描述性注释，测试已通过
+13. 修改crc16位与32位的生成函数与验证函数
+14. 加入modbus的crc16算法
+15.修改了crc16位校验中的函数使用错误，讲memcpy()改为了memcmp
