--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,4 +16,5 @@ v 0.1.1.5
 12. 完成了split_str函数的测试，添加了对函数参数的的描述性注释，测试已通过
 13. 修改crc16位与32位的生成函数与验证函数
 14. 加入modbus的crc16算法
-15.修改了crc16位校验中的函数使用错误，讲memcpy()改为了memcmp
+15. 修改了crc16位校验中的函数使用错误，讲memcpy()改为了memcmp
+16. 修改了crc校验函数，添加了update_crc16_by_string 和update_crc32_by_string来更新Crc校验码。
