--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
 v 0.1.1.6
-
+1. 加入链表结构类型
+2. NorMap映射类型，加入add与del映射对函数
+3. 加入链表获得数据节点宏 list_entry
+4. 添加了代码注释与函数功能说明，添加了List与ListT类的构造与析构函数，添加了二者的函数定义
