v 0.1.1.6-5 1. 修改了SharedMemory类的构造函数 2. 将此修改添加到日志

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,3 +3,4 @@ v 0.1.1.6
 2. NorMap映射类型，加入add与del映射对函数
 3. 加入链表获得数据节点宏 list_entry
 4. 添加了代码注释与函数功能说明，添加了List与ListT类的构造与析构函数，添加了二者的函数定义
+5. 修改了ShareMemory带参数的构造函数
